# mac-watcher-swift

./: .gitignore  Makefile  Package.swift  README.md  codex-report.md  notes.md
Sources/CaptureSupport/: ProcessUtilities.swift
Sources/capture/: AccessibilityTreeCollector.swift  AccessibilityTreeIntermediateBuilder.swift  JSONAccessibilityTreeRenderer.swift  capture.swift
Sources/observe/: AccessibilityProcessObserver.swift  main.swift  observe.swift
Sources/screenshot/: main.swift
Sources/watcher/: AXValueUtilities.swift  AccessibilityNode.swift  AccessibilityTree.swift  AccessibilityTreeConfiguration.swift  AccessibilityTreeRenderer.swift  main.swift
chrome-dev-tools-mcp/: Cargo.toml
python/: Makefile  notes.md  pyproject.toml
python/watcher/: capture.py  frames.py  live_session.py  main.py  streamer.py  tools.py  utils.py
python/watcher/prompts/: system.md
rust/: Cargo.toml  notes.md
rust-watcher/: Cargo.toml  Makefile
rust-watcher/src/: main.rs  proc.rs
rust/capture/: Cargo.toml
rust/capture/src/: main.rs
rust/core/: Cargo.toml
rust/core/src/: capture_session.rs  frame_source.rs  jpeg.rs  lib.rs  permissions.rs  response_printer.rs  utils.rs
rust/src/: gemini.rs  main.rs
rust/watcher/: Cargo.toml
rust/watcher/src/: main.rs
swift/: Makefile  Package.swift  README.md
swift/Sources/CaptureSupport/: Timing.swift
swift/Sources/capture/: AccessibilityTreeRenderer.swift  capture.swift
swift/Sources/observe/: AccessibilityEventLogger.swift
swift/Sources/screenshot/: main.swift
