[package]
name = "watcher"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.39", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
url = "2.5"
base64 = "0.22"
http = "1.1"
