[package]
name = "core"
version.workspace = true
edition.workspace = true

[dependencies]
base64 = { workspace = true }
derive_builder = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
url = { workspace = true }
